Aura - Listbox | fix header checkbox alignment

--- a/src/assets/components/themes/aura-dark-pink/theme.css
+++ b/src/assets/components/themes/aura-dark-pink/theme.css
@@ -6738,6 +6738,9 @@
   .p-listbox.p-disabled .p-listbox-list .p-listbox-item {
     color: #a1a1aa;
   }
+  .p-listbox .p-listbox-header:has(.p-checkbox) {
+    padding: 0.5rem 1rem 0 1rem;
+  }
 
   .p-message {
     backdrop-filter: blur(10px);
